--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-      "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
+    "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
+    "com.svermeulen.extenject": "https://github.com/JasonBright/Zenject-jb-mod.git?path=UnityProject/Assets/Plugins/Zenject",
     "com.unity.ide.rider": "3.0.34",
     "com.unity.render-pipelines.universal": "16.0.6",
     "com.unity.modules.accessibility": "1.0.0",
